# activate-virtualenv

./: README.md  pyproject.toml
src/activate_virtualenv/: __init__.py  activate_virtualenv.py
